# futabato.github.io

./: .gitignore  Gemfile  README.md  _config.yml  about.md  astro.config.mjs  biome.json  index.md  manual_picks.yaml  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  theme.config.tsx
.github/: deploy.yml  nextjs-bundle-analysis.yml
.github/ISSUE_TEMPLATE/: pick.yml
.github/workflows/: daily-digest.yml  deploy.yml  nextjs.yml  process-picks.yml  weekly-digest.yml
_includes/: head.html
_layouts/: default.html  post.html
_posts/: Welcome.md
_sass/: main.scss
_site/: README.md  index.html
assets/css/: .styles.scss.swp  styles.scss
assets/js/: darkmode.js  search.js  simple-jekyll-search.min.js
pages/: _meta.json  index.mdx
public/rss/: feed.xml  index.html
scripts/: README.md  claude_client.py  digest_config.yaml  fetch_digest.py
scripts/archive/: digest-2026-04-05.json  digest-2026-04-06.json  digest-2026-04-07.json  digest-2026-04-09.json  digest-2026-04-10.json  digest-2026-04-13.json  digest-2026-04-15.json  digest-2026-04-17.json  digest-2026-04-19.json  digest-2026-04-21.json  digest-2026-04-23.json  digest-2026-04-25.json  digest-2026-04-26.json  digest-2026-04-28.json  digest-2026-04-29.json  digest-2026-04-30.json  digest-2026-05-01.json  digest-2026-05-03.json  digest-2026-05-06.json  digest-2026-05-07.json  digest-2026-05-09.json  digest-2026-05-10.json  digest-2026-05-11.json  digest-2026-05-12.json  digest-2026-05-13.json  digest-2026-05-14.json  digest-2026-05-15.json  digest-2026-05-16.json  digest-2026-05-17.json  (+35 more)
(+62 files in other folders)
