[project]
name = "ai-security-digest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "S603",  # subprocess-without-shell-check (not applicable)
    "S607",  # start-process-with-partial-path (not applicable)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = [
    "S113",  # request-without-timeout (timeouts are set explicitly)
    "S318",  # minidom.parseString on self-generated XML, not untrusted data
    "E501",  # inline HTML/CSS templates exceed line length
]
